Bard - fix floating toolbar visibility

--- a/resources/css/components/fieldtypes/bard.css
+++ b/resources/css/components/fieldtypes/bard.css
@@ -170,6 +170,10 @@
         &:before {
             @apply border-t-black top-full start-1/2 absolute -ml-[3px] content-none border-6 border-transparent;
         }
+
+        button svg {
+            @apply text-white opacity-100;
+        }
     }
 
     .bard-add-set-button {
